[package]
name = "deathadder_hz_helper"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
hidapi = { version = "2.6.1", features = ["windows-native"] }
pico-args = { version = "0.5.0" }
